# webadmin

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
debian/: .gitignore  README.source  changelog  control  copyright  rules
locales/: en.json  zh-CN.json
src/: main.rs
src/components/: badge.rs  card.rs  icon.rs  language.rs  mod.rs  report.rs  skeleton.rs
src/components/form/: button.rs  expression.rs  input.rs  mod.rs  select.rs  stacked_badge.rs  stacked_duration.rs  stacked_input.rs  tab.rs
src/components/layout/: header.rs  mod.rs  sidebar.rs  toggle.rs
src/components/list/: header.rs  mod.rs  pagination.rs  row.rs  table.rs  toolbar.rs
src/components/main/: alert.rs  header.rs  login.rs  manage.rs  mod.rs  modal.rs  sidebar.rs
src/components/messages/: alert.rs  mod.rs  modal.rs
src/core/: form.rs  http.rs  mod.rs  oauth.rs  schema.rs  url.rs
src/core/expr/: mod.rs  parser.rs  tokenizer.rs
src/pages/: authorize.rs  login.rs  mod.rs  notfound.rs
src/pages/account/: app_password.rs  crypto.rs  mfa.rs  mod.rs  password.rs
src/pages/config/: edit.rs  list.rs  mod.rs  search.rs
src/pages/config/schema/: auth.rs  authentication.rs  common.rs  directory.rs  http.rs  imap.rs  jmap.rs  listener.rs  mod.rs  server.rs  sieve.rs  smtp.rs  spamfilter.rs  spamlists.rs  storage.rs  store.rs  tls.rs  tracing.rs  webdav.rs
src/pages/directory/: dns.rs  edit.rs  list.rs  mod.rs
src/pages/directory/accounts/: edit.rs  list.rs  mod.rs
src/pages/directory/domains/: display.rs  edit.rs  list.rs  mod.rs
src/pages/directory/principals/: edit.rs  list.rs  mod.rs
src/pages/enterprise/: dashboard.rs  mod.rs  undelete.rs
src/pages/enterprise/tracing/: display.rs  event.rs  list.rs  live.rs  mod.rs
src/pages/manage/: logs.rs  maintenance.rs  mod.rs  spam.rs  troubleshoot.rs
src/pages/queue/: mod.rs
src/pages/queue/messages/: list.rs  manage.rs  mod.rs
src/pages/queue/reports/: arf.rs  display.rs  dmarc.rs  list.rs  mod.rs  tls.rs
src/pages/reports/: display.rs  list.rs  mod.rs
style/: output.css
