[package]
name = "webadmin"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.5", features = ["csr", "nightly"] }
leptos-use = "0.10.2"
gloo-net = { version = "0.5", features = ["http"] }
form_urlencoded = "1.1.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.113"
web-sys = { version = "0.3", features = ["AbortController", "AbortSignal"] }
log = "0.4"
console_log = "1"
thaw = { version = "0.2.0-beta", features = ["csr"] }
icondata = "0.3.0"
base64 = "0.21.7"
gloo-storage = "0.3.0"
