[package]
name = "webadmin"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.5", features = ["csr", "nightly"] }
leptos-use = "0.10.2"
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.3.0"
form_urlencoded = "1.1.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.113"
web-sys = { version = "0.3", features = ["AbortController", "AbortSignal"] }
log = "0.4"
console_log = "1"
base64 = "0.21.7"
humansize = "2.1.3"
pwhash = "1.0.0"
chrono = { version = "0.4.34", features = ["serde"] }
chrono-humanize = "0.2.3"
ahash = { version = "0.8.11", features = ["serde"] }

[features]
demo = []
default = ["demo"]
