[package]
name = "webadmin"
description = "Stalwart Web-based Admin"
authors = [ "Stalwart Labs Ltd. <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/webadmin"
homepage = "https://stalw.art"
keywords = ["web", "admin", "email", "mail", "server"]
categories = ["email"]
license = "AGPL-3.0-only OR LicenseRef-SEL"
version = "0.1.27"
edition = "2021"
resolver = "2"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.9", features = ["csr"] }
leptos_meta = { version = "0.6.9", features = ["csr"] }
leptos_router = { version = "0.6.9", features = ["csr"] }
leptos-use = "0.13"
codee = { version = "0.2", features = ["json_serde"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["AbortController", "AbortSignal"] }
log = "0.4"
console_log = "1"
base64 = "0.22"
humansize = "2.1.3"
pwhash = "1.0.0"
chrono = { version = "0.4.34", features = ["serde"] }
chrono-humanize = "0.2.3"
ahash = { version = "0.8.11", features = ["serde"] }
regex = "1.10.3"
form_urlencoded = "1.1.0"
serde_urlencoded = "0.7.1"
totp-rs = { version = "5.5.1", features = ["otpauth", "qr", "gen_secret"] }
web-time = "1.1.0"
rand = "0.8"
leptos-chartistry = "0.1.7"

[features]
demo = []
#default = ["demo"]
default = []
